--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
     "express-validator": "^7.2.0",
-    "mongoose": "^8.7.2"
+    "mongoose": "^8.7.2",
+    "nodemailer": "^6.9.16"
   }
 }
